<resources>

    <string name="app_name">Busment</string>
    <!--            Menu names              -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_Products">Products</string>

    <!--            General Strings              -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add_description">add product</string>
    <string name="add_product_button">add product</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="bt_guardar">Guardar</string>
    <string name="search">search</string>
    <string name="image_product">Image</string>
    <string name="price_value">$0.00</string>
    <string name="select">Category</string>
    <string name="rotate_image">rotate image</string>
    <string name="select_image">select image</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="how_we_work">how we work?</string>
</resources>