<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".ui.loginsignup.RetailerStartUpScreen"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/retailer_circle_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:background="@color/primaryColor"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:background="@color/primaryColor"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/how_we_work"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="#00000000"/>

    </LinearLayout>

</ScrollView>